--- a/src/main/resources/view/PaneUsuario.fxml
+++ b/src/main/resources/view/PaneUsuario.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneProximamente">
+<AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneUsuarioController">
    <children>
       <Pane prefHeight="878.0" prefWidth="1263.0">
          <children>
