--- a/src/main/resources/views/PantallaModelo.fxml
+++ b/src/main/resources/views/PantallaModelo.fxml
@@ -17,7 +17,7 @@
 
 <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="982.0" prefWidth="1512.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PantallaModeloController">
    <top>
-      <GridPane fx:id="paneHeader" minHeight="80.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER">
+      <GridPane fx:id="paneHeader" minHeight="80.0" prefWidth="100.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
@@ -27,7 +27,7 @@
           <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <ImageView fx:id="imgLogo" fitHeight="150.0" fitWidth="80.0" onDragDetected="#logoPressed" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgLogo" fitHeight="100.0" fitWidth="80.0" onDragDetected="#logoPressed" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../resources/images/logo/logo.png" />
                </image>
@@ -35,7 +35,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
             </ImageView>
-            <ImageView fx:id="imgSection" fitHeight="150.0" fitWidth="95.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+            <ImageView fx:id="imgSection" fitHeight="100.0" fitWidth="95.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
                <image>
                   <Image url="@../../resources/images/sections/Pelicula.png" />
                </image>
@@ -82,7 +82,7 @@
                               </HBox>
                            </children>
                         </VBox>
-                        <ImageView fx:id="imgUser" fitHeight="80.0" fitWidth="80.0" nodeOrientation="INHERIT" onDragDetected="#imgUserPressed" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="imgUser" fitHeight="75.0" fitWidth="75.0" nodeOrientation="INHERIT" onDragDetected="#imgUserPressed" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../resources/images/user.png" />
                            </image>
